# empyrical

./: .gitignore  README.md  setup.cfg  setup.py
empyrical/: __init__.py  perf_attrib.py  stats.py  utils.py
tests/: test_perf_attrib.py  test_stats.py
