[metadata]
description-file = README.md
license_file = LICENSE
maintainer = "Quantopian Inc"
maintainer_email = "opensource@quantopian.com"
author = "Quantopian Inc"
author_email = "opensource@quantopian.com"
url = "https://github.com/quantopian/empyrical"
license = "Apache License, Version 2.0"
classifiers = 
    "Development Status :: 4 - Beta"
    "Programming Language :: Python"
    "Programming Language :: Python :: 2"
    "Programming Language :: Python :: 3"
    "Programming Language :: Python :: 2.7"
    "Programming Language :: Python :: 3.4"
    "Programming Language :: Python :: 3.5"
    "License :: OSI Approved :: Apache Software License"
    "Intended Audience :: Science/Research"
    "Topic :: Scientific/Engineering"
    "Topic :: Scientific/Engineering :: Mathematics"
    "Operating System :: OS Independent"


# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
[versioneer]
VCS = git
style = pep440
versionfile_source = empyrical/_version.py
versionfile_build = empyrical/_version.py
tag_prefix = ""
parentdir_prefix = empyrical-


